...
      ) : (
        <Box mt="$6" mx="$6">
          <Text
            mb="$3"
            textAlign="center"
            fontSize="$xl"
            testID="not-found-text">
            Category not found
          </Text>
          <Button
            py="$2"
            px="$6"
            borderRadius="$md"
            onPress={() => navigation.navigate('Categories')}
            bgColor="$secondary700"
            testID="backtocategories-btn">
            <ButtonText fontFamily="$heading" fontWeight="$normal">
              BACK TO CATEGORIES
            </ButtonText>
          </Button>
        </Box>
      )}
...
