...
    if (!inSearchScreen) {
      navigation.navigate('Search', {});
    }
  }, []);

  return (
    <Pressable onPress={onPress} testID="search-btn">
      <Box pointerEvents={inSearchScreen ? 'auto' : 'none'}>
        <Input
          variant="rounded"
          backgroundColor="$coolGray100"
          borderColor="$coolGray100"
          px="$2">
          <InputSlot>
            <Ionicons
              name={'search'}
              size={24}
              color={config.tokens.colors.coolGray400}
              style={{marginLeft: 10}}
            />
          </InputSlot>
          <InputField
...
